<resources>
    <string name="app_name">Yuk! Menulis</string>
    <string name="nickname">Nama Panggilan</string>
    <string name="start">Mulai</string>
    <string name="save">Simpan</string>
    <string name="category">Pilih Kategori</string>
    <string name="alphabets_lower">Huruf Kecil</string>
    <string name="alphabets_upper">Huruf Kapital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="numerals">Angka</string>
    <string name="timer">00:00:00</string>
    <string name="facebook_app_id">347533075791149</string>
    <string name="fb_login_protocol_scheme">fb347533075791149</string>
    <string name="skip">Lewati</string>
    <string name="account_info">Anda sudah masuk menggunakan Facebook.</string>
    <string name="facebook_login">Masuk menggunakan Facebook</string>
    <string name="click_login">Dengan masuk menggunakan Facebook, Anda memiliki kelebihan untuk melihat Papan Skor!</string>
    <string name="account">Akun</string>
    <string name="scoreboard">Papan Skor</string>
    <string name="home">Beranda</string>
    <string name="accuracy_score">Akurasi Skor</string>
    <string name="next">OK</string>
    <string name="guest">Pengguna</string>
    <string name="facebook_logout">Keluar dari Facebook</string>
    <string name="ok">OK</string>
    <string name="heading_dialog">Simpan Skor</string>
    <string name="back">Kembali ke Papan Skor</string>
    <string name="clear">Hapus Kanvas</string>
    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="appreciation">SERTIFIKASI APRESIASI</string>
    <string name="kepada">diberikan kepada</string>
    <string name="karena">telah mendapatkan nilai</string>
</resources>
