<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aferyannie.learningapp.ResultFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:padding="18dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_dialog"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/nickname"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/btnNames"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/inputNames"
            android:layout_marginTop="25dp"
            android:background="@drawable/confusing_shape"
            android:fontFamily="casual"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnNames"
            android:layout_alignBottom="@+id/btnNames"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/btnNames"
            android:fontFamily="casual"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
