<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightpurple"
    android:orientation="vertical"
    tools:context="com.example.aferyannie.learningapp.AppreciationFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/appreciation"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txtFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:fontFamily="casual"
        android:text="@string/kepada"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtForName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:fontFamily="cursive"
        android:text="Annisa"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/txtFor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="casual"
        android:text="@string/karena"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFor2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:fontFamily="cursive"
        android:text="9"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/txtNotes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAverage"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="TextView"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNotes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/confusing_shape"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>
